--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-    <title>Document</title>
+    <title>mmk-calendar</title>
 </head>
 <body>
     <div class="main">
@@ -52,13 +52,13 @@
             </div>
         </div>
     
-        <p class="total"></p>
         <div class="radio-block">
             <label><input type="radio" name="brigade" value="0"><span>Бр 1</span></label>
             <label><input type="radio" name="brigade" value="1" checked><span>Бр 2</span></label>
             <label><input type="radio" name="brigade" value="2"><span>Бр 3</span></label>
             <label><input type="radio" name="brigade" value="3"><span>Бр 4</span></label>
         </div>
+        <p class="total"></p>
     </div>
 
     <script type="module" src="calendar.js"></script>
